modification des classes et creation de la classe repas

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.0.BUILD-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>projettest</groupId>
+	<groupId>projetest</groupId>
 	<artifactId>foodtruck</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>foodtruck</name>
