--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/springmvc?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
-
+spring.datasource.initialization-mode=always
